updated-API-URL

--- a/frontend/.env
+++ b/frontend/.env
@@ -3,4 +3,4 @@ VITE_SUPABASE_ANON_KEY = eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYm
 
 VITE_API_KEY = 7A047E7A
 
-VITE_API_URL=https://mybox-1uup.onrender.com/
+VITE_API_URL=https://mybox-1uup.onrender.com
